--- a/frontend/estudafacil/package.json
+++ b/frontend/estudafacil/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.14.4",
+    "swiper": "^11.1.14",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
