--- a/backend/estudafacil/Dockerfile
+++ b/backend/estudafacil/Dockerfile
@@ -1,10 +1,22 @@
-FROM python:3.10
+FROM python:3.10-slim
 
-WORKDIR /app
+WORKDIR /code
 
-COPY requirements.txt /app/
-RUN pip install -r requirements.txt
+COPY . /code
 
-COPY . /app/
+RUN apt-get update && apt-get install -y curl
 
-EXPOSE 8000
+RUN apt-get update && apt-get install -y \
+    gcc \
+    libmariadb-dev \
+    python3-dev \
+    pkg-config \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN pip install --upgrade pip
+COPY requirements.txt /tmp/
+RUN pip install -r /tmp/requirements.txt
+
+RUN rm -rf /root/.cache/
+
+RUN curl -sSLo /usr/local/bin/wait-for-it https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh && chmod +x /usr/local/bin/wait-for-it
