--- a/backend/estudafacil/docker-compose.yml
+++ b/backend/estudafacil/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: mysql:8
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
@@ -15,16 +15,16 @@ services:
       - "3306:3306"
 
   web:
-    build: ./backend
-    command: python manage.py runserver 0.0.0.0:8000
+    build: ./
+    command: sh -c "wait-for-it db:3306 -- python manage.py migrate && gunicorn --bind 0.0.0.0:8000 estudafacil.wsgi:application"
     environment:
-      - DATABASE_HOST=${DATABASE_HOST}
+      - DATABASE_HOST=db
       - DATABASE_NAME=${MYSQL_DATABASE}
       - DATABASE_USER=${MYSQL_USER}
       - DATABASE_PASSWORD=${MYSQL_PASSWORD}
-      - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
+      - DJANGO_SECRET_KEY=${SECRET_KEY}
     volumes:
-      - ./backend:/code
+      - .:/code
     ports:
       - "8000:8000"
     depends_on:
