--- a/backend/estudafacil/fly.toml
+++ b/backend/estudafacil/fly.toml
@@ -10,7 +10,13 @@ console_command = '/code/manage.py shell'
 [build]
 
 [env]
-  PORT = '8000'
+  MYSQL_USER = "root"
+  MYSQL_PASSWORD = "Souza125"
+  MYSQL_DATABASE = "estudafacil_db"
+  EMAIL_HOST_USER = "estudafacil.contato@gmail.com"
+  EMAIL_HOST_PASSWORD = "uoqy xrbt pxpk kfpf"
+  SECRET_KEY = "django-insecure-s7j!q_3xevb=3(2rdxm+a2iyrma-jwyk0_g@rcm#foghs83^ae"
+  PORT = "8000"
 
 [http_service]
   internal_port = 8000
